# FileManager

./: .gitignore  CMakeLists.txt
cmake/: CommonUtilsConfig.cmake.in  FileManagerConfig.cmake.in
include/CommonUtils/: fileutils.h  jsonutils.h  ziputils.h
src/: fileutils.cpp  jsonutils.cpp  ziputils.cpp
